Remove notification and notification card

--- a/HuTaoHelper.Visual/App.xaml
+++ b/HuTaoHelper.Visual/App.xaml
@@ -12,6 +12,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
                 <ResourceDictionary Source="/Templates.xaml" />
                 <ResourceDictionary Source="/Tray.xaml" />
+                <ResourceDictionary Source="/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
