--- a/HuTaoHelper.Visual/Templates.xaml
+++ b/HuTaoHelper.Visual/Templates.xaml
@@ -27,7 +27,10 @@
                 </Ellipse>
                 <Border Grid.Column="2" Grid.Row="0" Background="Transparent">
                     <StackPanel VerticalAlignment="Center" Orientation="Vertical">
-                        <TextBlock HorizontalAlignment="Left" FontSize="18" Text="{Binding DisplayName}" />
+                        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+                            <TextBlock FontSize="18" Text="{Binding DisplayName}" />
+                            <TextBlock Margin="5 0 0 0" FontSize="18" Text="{Binding NotificationTarget}" Foreground="Silver"/>
+                        </StackPanel>
                         <TextBlock HorizontalAlignment="Left" FontSize="18" Text="{Binding Uid}" Foreground="Silver"/>
                     </StackPanel>
                 </Border>
